feat: OCR 후 DB에 저장, 에러핸들링 추가 #6